--- a/QtGUI/mainwindow.ui
+++ b/QtGUI/mainwindow.ui
@@ -6,27 +6,186 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>512</width>
-    <height>553</height>
+    <width>686</width>
+    <height>541</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="OpenGLWidget" name="centralWidget">
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
+  <widget class="QWidget" name="centralWidget">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="leftMargin">
+     <number>4</number>
+    </property>
+    <property name="topMargin">
+     <number>4</number>
+    </property>
+    <property name="rightMargin">
+     <number>4</number>
+    </property>
+    <property name="bottomMargin">
+     <number>4</number>
+    </property>
+    <item>
+     <widget class="OpenGLWidget" name="displayArea" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <layout class="QVBoxLayout" name="displayAreaLayout">
+       <property name="spacing">
+        <number>2</number>
+       </property>
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+      </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QWidget" name="optionsWidget" native="true">
+      <property name="minimumSize">
+       <size>
+        <width>200</width>
+        <height>160</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>200</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <layout class="QVBoxLayout" name="optionsWidgetLayout">
+       <property name="spacing">
+        <number>2</number>
+       </property>
+       <item>
+        <widget class="QGroupBox" name="generalOptions">
+         <layout class="QGridLayout" name="gridLayout">
+          <property name="spacing">
+           <number>2</number>
+          </property>
+          <item row="2" column="0">
+           <spacer name="verticalSpacer">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>10</width>
+              <height>10</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="0" column="0">
+           <widget class="QGroupBox" name="gammaGroupBox">
+            <property name="title">
+             <string>Gamma</string>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_2">
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="spacing">
+              <number>2</number>
+             </property>
+             <item row="0" column="0">
+              <widget class="QFloatSlider" name="gammaSlider">
+               <property name="maximum">
+                <number>50</number>
+               </property>
+               <property name="value">
+                <number>22</number>
+               </property>
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QLabel" name="gammaValue">
+               <property name="text">
+                <string>2.2</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QGroupBox" name="tonemapGroupBox">
+            <property name="title">
+             <string>Tonemap</string>
+            </property>
+            <layout class="QGridLayout" name="tonemapGroupBoxLayout">
+             <item row="0" column="0">
+              <widget class="QGroupBox" name="keyValueGroupBox">
+               <property name="title">
+                <string>Key Value</string>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_3">
+                <item row="0" column="0">
+                 <widget class="QDoubleSpinBox" name="keyValue">
+                  <property name="locale">
+                   <locale language="English" country="UnitedStates"/>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.010000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>0.180000000000000</double>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>512</width>
+     <width>686</width>
      <height>21</height>
     </rect>
    </property>
@@ -140,6 +299,19 @@
    <extends>QWidget</extends>
    <header>openglwidget.h</header>
    <container>1</container>
+   <slots>
+    <slot>gammaChanged(float)</slot>
+    <slot>keyValueChanged(double)</slot>
+   </slots>
+  </customwidget>
+  <customwidget>
+   <class>QFloatSlider</class>
+   <extends>QSlider</extends>
+   <header>qfloatslider.h</header>
+   <slots>
+    <signal>floatSliderMoved(float)</signal>
+    <signal>floatSliderMovedString(QString)</signal>
+   </slots>
   </customwidget>
  </customwidgets>
  <resources/>
@@ -253,6 +425,54 @@
     <hint type="destinationlabel">
      <x>319</x>
      <y>239</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>gammaSlider</sender>
+   <signal>floatSliderMovedString(QString)</signal>
+   <receiver>gammaValue</receiver>
+   <slot>setText(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>574</x>
+     <y>55</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>655</x>
+     <y>55</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>gammaSlider</sender>
+   <signal>floatSliderMoved(float)</signal>
+   <receiver>displayArea</receiver>
+   <slot>gammaChanged(float)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>572</x>
+     <y>55</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>239</x>
+     <y>280</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>keyValue</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>displayArea</receiver>
+   <slot>keyValueChanged(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>581</x>
+     <y>131</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>239</x>
+     <y>280</y>
     </hint>
    </hints>
   </connection>
